--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .grid-container {
   display: grid;
-  grid-template-columns: auto auto auto auto auto ;
+  grid-template-columns: auto auto auto auto auto;
   grid-gap: 10px;
   /* background-color: #2196F3; */
   padding: 10px;
@@ -11,6 +11,15 @@
   border: 1px solid black;
   text-align: center;
   font-size: 30px;
+  width: 100%;
+  height: 460px;
+}
+
+.component-list-title {
+  background-color: rgba(141, 60, 60, 0.8);
   width:100%;
-  height : 460px;
+}
+
+.component-list {
+  background-color: rgba(26, 49, 97, 0.8);
 }
