--- a/css/main.css
+++ b/css/main.css
@@ -6,18 +6,18 @@
   background-color: var(--bg-color);
 }
 
-.docs-link {
+.docs-link span {
   float: right;
   margin-top: 0.5em;
   margin-right: 4em;
-  font-size: 1.05rem;
+  font-size: 1.5rem;
   cursor: pointer;
   text-decoration: none;
-  color: #000;
+  color: var(--primary-color);
 }
 
-.docs-link:hover {
-  text-decoration: underline;
+.docs-link span:hover {
+  color: var(--secondary-color);
 }
 
 .main-container {
