--- a/css/comp-page.css
+++ b/css/comp-page.css
@@ -32,7 +32,7 @@
   display: block;
   width: 100%;
   color: var(--primary-color);
-  font-weight: 500;
+  font-weight: bold;
   margin-top: 0.6em;
 }
 
