--- a/css/login.css
+++ b/css/login.css
@@ -43,3 +43,11 @@
 .bg-primary {
   background-color: var(--primary-color);
 }
+
+.pull-down-login {
+  margin-top: 15em;
+}
+
+.pull-down-register {
+  margin-top: 12em;
+}
