--- a/pages/components/Avatar/avatar.css
+++ b/pages/components/Avatar/avatar.css
@@ -8,44 +8,44 @@ img.avatar {
 }
 
 .avatar-xl img {
-  width: 12em;
-  height: 12em;
+  width: 12rem;
+  height: 12rem;
 }
 
 .avatar-lg img {
-  width: 10em;
-  height: 10em;
+  width: 10rem;
+  height: 10rem;
 }
 
 .avatar-std img {
-  width: 8em;
-  height: 8em;
+  width: 8rem;
+  height: 8rem;
 }
 
 .avatar-sm img {
-  width: 6em;
-  height: 6em;
+  width: 6rem;
+  height: 6rem;
 }
 
 .avatar-xs img {
-  width: 4em;
-  height: 4em;
+  width: 4rem;
+  height: 4rem;
 }
 
 .online {
   outline: solid 5px var(--success-color);
-  margin: 0.5em;
+  margin: 0.5rem;
   box-shadow: 7px 7px 5px rgb(63, 64, 95);
 }
 
 .offline {
   outline: solid 5px var(--failure-color);
-  margin: 0.5em;
+  margin: 0.5rem;
   box-shadow: 7px 7px 5px rgb(63, 64, 95);
 }
 
 .away {
   outline: solid 5px var(--warning-color);
-  margin: 0.5em;
+  margin: 0.5rem;
   box-shadow: 7px 7px 5px rgb(63, 64, 95);
 }
