Scripted Alert conponent

--- a/pages/components/Avatar/avatar.html
+++ b/pages/components/Avatar/avatar.html
@@ -143,7 +143,7 @@
             <a href="../../howToUse.html" class="footer-button">
                 <img src="../../../images/previous-arrow.svg" alt="" />Usage
             </a>
-            <a href="./pages/components/Alert/alert.html" class="footer-button">
+            <a href="../Alert/alert.html" class="footer-button">
                 Alert
                 <img src="../../../images/forward-arrow.svg" alt="" />
             </a>
