--- a/pages/components/Badge/badge.html
+++ b/pages/components/Badge/badge.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../../css/main.css" />
     <link rel="stylesheet" href="../../../css/comp-page.css" />
     <link rel="stylesheet" href="../../../css/utilities.css" />
-    <link rel="stylesheet" href="./alert.css" />
+    <link rel="stylesheet" href="./badge.css" />
     <link rel="shortcut icon" href="../../../images/simpleUIlogo.png" type="image/x-icon" />
     <link rel="apple-touch-icon" href="../../../images/simpleUIlogo.png" />
     <link rel="stylesheet" href="../../../css/night-owl.css">
@@ -67,60 +67,40 @@
         </ul>
     </nav>
     <main class="component-display">
-        <h1 class="component-display-header">Alert</h1>
+        <h1 class="component-display-header">Badge</h1>
         <pre class="comp-code-container"><code class="html">
-    @import url("https://si-mpleui.netlify.app/pages/components/Alert/alert.css");
+    @import url("https://si-mpleui.netlify.app/pages/components/Badge/badge.css");
     &lt;link rel="stylesheet" 
-    href="https://si-mpleui.netlify.app/pages/components/Alert/alert.css">
+    href="https://si-mpleui.netlify.app/pages/components/Badge/badge.css">
             </code></pre>
         <br />
-        <div class="alert alert-dismissible alert-success">
-            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert
-                message</a>.
+        <div class="row">
+            <span class="badge bg-error">Primary</span>
+            <span class="badge bg-success">Success</span>
+            <span class="badge bg-warning">Warning</span>
+            <span class="badge bg-info">Info</span>
         </div>
-
-        <div class="alert alert-dismissible alert-warning">
-            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            <strong>Something seems to be off</strong> please try checking on <a href="#" class="alert-link">this
-                important alert
-                message</a>.
-        </div>
-
-        <div class="alert alert-dismissible alert-info">
-            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            <strong>Heads up!</strong> This <a href="#" class="alert-link">alert needs your attention</a>, but it's not
-            super important.
-        </div>
-
-        <div class="alert alert-dismissible alert-error">
-            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            <strong>Oh snap!</strong> <a href="#" class="alert-link">Change a few things up</a> and try submitting
-            again.
-        </div>
-
         <br />
         <p class="component-description">
-            The alert can be customized to four styles, <span class="highlight">alert-success</span> (green), <span
-                class="highlight">alert-warning</span> (yellow), <span class="highlight">alert-info</span> (blue) <span
-                class="highlight">alert-error</span> (red).
+            The badges can be customized to four styles, <span class="highlight">bg-success</span> (green), <span
+                class="highlight">bg-warning</span> (yellow), <span class="highlight">bg-info</span> (blue) <span
+                class="highlight">bg-error</span> (red).
         </p>
         <pre class="comp-code-container">
             <code class="html">
-            &lt;div class="alert alert-dismissible alert-error">
-                &lt;button type="button" class="btn-close" data-bs-dismiss="alert">&lt;/button>
-                &lt;strong>Oh snap!&lt;/strong> &lt;a href="#" class="alert-link">Change a few things up&lt;/a> and try submitting
-                again.
-            &lt;/div>
+                &lt;span class="badge bg-error">Primary&lt;/span>
+                &lt;span class="badge bg-success">Success&lt;/span>
+                &lt;span class="badge bg-warning">Warning&lt;/span>
+                &lt;span class="badge bg-info">Info&lt;/span>
             </code>
         </pre>
 
         <footer class="page-footer">
             <a href="../Avatar/avatar.html" class="footer-button">
-                <img src="../../../images/previous-arrow.svg" alt="" />Avatar
+                <img src="../../../images/previous-arrow.svg" alt="" />Alert
             </a>
             <a href="../Badge/badge.html" class="footer-button">
-                Badge
+                Button
                 <img src="../../../images/forward-arrow.svg" alt="" />
             </a>
         </footer>
