Scripted Button component

--- a/pages/components/Badge/badge.html
+++ b/pages/components/Badge/badge.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Avatar</title>
+    <title>Badge</title>
     <link rel="stylesheet" href="../../../css/header.css" />
     <link rel="stylesheet" href="../../../css/main.css" />
     <link rel="stylesheet" href="../../../css/comp-page.css" />
@@ -99,7 +99,7 @@
             <a href="../Avatar/avatar.html" class="footer-button">
                 <img src="../../../images/previous-arrow.svg" alt="" />Alert
             </a>
-            <a href="../Badge/badge.html" class="footer-button">
+            <a href="../Button/button.html" class="footer-button">
                 Button
                 <img src="../../../images/forward-arrow.svg" alt="" />
             </a>
