--- a/css/comp-page.css
+++ b/css/comp-page.css
@@ -175,10 +175,11 @@
   text-decoration: none;
   color: #000;
   font-weight: 500;
+  font-size: 1.5em;
 }
 
 .footer-button > img {
-  width: 1.5em;
+  width: 2em;
   margin-top: 0.05em;
   margin-left: 0.2em;
   margin-right: 0.2em;
