--- a/pages/components/Card/card.html
+++ b/pages/components/Card/card.html
@@ -213,11 +213,11 @@
             part of the component script.
         </p>
         <footer class="page-footer">
-            <a href="../Avatar/avatar.html" class="footer-button">
-                <img src="../../../images/previous-arrow.svg" alt="" />Alert
-            </a>
             <a href="../Button/button.html" class="footer-button">
-                Button
+                <img src="../../../images/previous-arrow.svg" alt="" />Button
+            </a>
+            <a href="../Image/image.html" class="footer-button">
+                Image
                 <img src="../../../images/forward-arrow.svg" alt="" />
             </a>
         </footer>
