--- a/pages/components/Card/card.html
+++ b/pages/components/Card/card.html
@@ -79,7 +79,7 @@
             <h2 class="sub-comp-header">Outlined Cards</h2>
         </div>
         <div class="row">
-            <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+            <div class="card text-white bg-primary mb-3" style="max-width: 25rem;">
                 <div class="card-header">Header</div>
                 <div class="card-body bg-primary">
                     <h4 class="card-title">Primary card title</h4>
@@ -87,7 +87,7 @@
                         card's content.</p>
                 </div>
             </div>
-            <div class="card border-primary mb-3" style="max-width: 20rem;">
+            <div class="card border-primary mb-3" style="max-width: 25rem;">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                     <h4 class="card-title">Primary card title</h4>
@@ -97,7 +97,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="card text-white bg-success mb-3" style="max-width: 20rem;">
+            <div class="card text-white bg-success mb-3" style="max-width: 25rem;">
                 <div class="card-header">Header</div>
                 <div class="card-body bg-success">
                     <h4 class="card-title">Primary card title</h4>
@@ -105,7 +105,7 @@
                         card's content.</p>
                 </div>
             </div>
-            <div class="card border-success mb-3" style="max-width: 20rem;">
+            <div class="card border-success mb-3" style="max-width: 25rem;">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                     <h4 class="card-title">Primary card title</h4>
@@ -115,7 +115,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
+            <div class="card text-white bg-warning mb-3" style="max-width: 25rem;">
                 <div class="card-header">Header</div>
                 <div class="card-body bg-warning">
                     <h4 class="card-title">Primary card title</h4>
@@ -123,7 +123,7 @@
                         card's content.</p>
                 </div>
             </div>
-            <div class="card border-warning mb-3" style="max-width: 20rem;">
+            <div class="card border-warning mb-3" style="max-width: 25rem;">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                     <h4 class="card-title">Primary card title</h4>
@@ -133,7 +133,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="card text-white bg-info mb-3" style="max-width: 20rem;">
+            <div class="card text-white bg-info mb-3" style="max-width: 25rem;">
                 <div class="card-header">Header</div>
                 <div class="card-body bg-info">
                     <h4 class="card-title">Primary card title</h4>
@@ -141,7 +141,7 @@
                         card's content.</p>
                 </div>
             </div>
-            <div class="card border-info mb-3" style="max-width: 20rem;">
+            <div class="card border-info mb-3" style="max-width: 25rem;">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                     <h4 class="card-title">Primary card title</h4>
@@ -151,7 +151,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="card text-white bg-danger mb-3" style="max-width: 20rem;">
+            <div class="card text-white bg-danger mb-3" style="max-width: 25rem;">
                 <div class="card-header">Header</div>
                 <div class="card-body bg-danger">
                     <h4 class="card-title">Primary card title</h4>
@@ -159,7 +159,7 @@
                         card's content.</p>
                 </div>
             </div>
-            <div class="card border-danger mb-3" style="max-width: 20rem;">
+            <div class="card border-danger mb-3" style="max-width: 25rem;">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                     <h4 class="card-title">Primary card title</h4>
@@ -171,14 +171,14 @@
         <br />
 
         <p class="component-description">
-            The <b>Solid Cards</b> can also be customized to four styles, <span class="highlight">bg-primary</span>
+            The <b>Solid Cards</b> can also be customized to five styles, <span class="highlight">bg-primary</span>
             (primary
             color),<span class="highlight">bg-success</span> (green), <span class="highlight">bg-warning</span>
             (yellow), <span class="highlight">bg-info</span> (blue) <span class="highlight">bg-error</span> (red).
         </p>
         <pre class="comp-code-container">
             <code class="html">
-                &lt;div class="card bg-primary mb-3" style="max-width: 20rem;">
+                &lt;div class="card bg-primary mb-3" style="max-width: 25rem;">
                     &lt;div class="card-header">Header&lt;/div>
                     &lt;div class="card-body bg-primary">
                         &lt;h4 class="card-title">Primary card title&lt;/h4>
@@ -189,7 +189,7 @@
             </code>
         </pre>
         <p class="component-description">
-            The <b>Solid Cards</b> can be customized to four styles, <span class="highlight">border-primary</span>
+            The <b>Outlined Cards</b> can be customized to five styles, <span class="highlight">border-primary</span>
             (primary
             color),<span class="highlight">border-success</span> (green), <span class="highlight">border-warning</span>
             (yellow), <span class="highlight">border-info</span> (blue) <span class="highlight">border-error</span>
@@ -197,7 +197,7 @@
         </p>
         <pre class="comp-code-container">
             <code class="html">
-                &lt;div class="card border-primary mb-3" style="max-width: 20rem;">
+                &lt;div class="card border-primary mb-3" style="max-width: 25rem;">
                     &lt;div class="card-header">Header&lt;/div>
                     &lt;div class="card-body ">
                         &lt;h4 class="card-title">Primary card title&lt;/h4>
@@ -208,7 +208,7 @@
             </code>
         </pre>
         <p class="component-description">
-            The width of the Cards can further be played around with, <span class="highlight">style="max-width:
+            The <b>width of the Cards</b> can further be played around with, <span class="highlight">style="max-width:
                 20rem;"</span>
             part of the component script.
         </p>
