--- a/pages/components/Alert/alert.css
+++ b/pages/components/Alert/alert.css
@@ -1,5 +1,18 @@
 :root {
   --transparent-color: #efcb2d00;
+  --warning-background: #f3d240d8;
+  --alert-error-1: #681107;
+  --alert-error-2: #821509;
+  --alert-error-bg: #f7d3cf;
+  --alert-error-ol: #f4bdb7;
+  --alert-info-link: #014a63;
+  --alert-info-ol: #b3e1f1;
+  --alert-info-bg: #ccebf5;
+  --alert-info-font: #015c7c;
+  --alert-success-link: #224704;
+  --alert-success-bg: #daeace;
+  --alert-success-ol: #c8dfb5;
+  --alert-success-font: #2a5905;
 }
 
 .alert {
@@ -37,7 +50,7 @@
 }
 .alert-warning {
   color: var(--primary-color);
-  background-color: #f3d240d8;
+  background-color: var(--warning-background);
 }
 
 .alert-warning .alert-link {
@@ -51,7 +64,7 @@ button {
   width: 1em;
   height: 1em;
   padding: 0.25em 0.25em;
-  color: #000;
+  color: var(--black-global);
   background: transparent
     url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e")
     center/1em auto no-repeat;
@@ -61,14 +74,14 @@ button {
 }
 
 .btn-close:hover {
-  color: #000;
+  color: var(--black-global);
   text-decoration: none;
   opacity: 0.75;
 }
 
 .btn-close:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(217, 35, 15, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(var(--primary-color), 0.25);
   opacity: 1;
 }
 
@@ -83,31 +96,31 @@ button {
 }
 
 .alert-success {
-  color: #2a5905;
-  background-color: #daeace;
-  border-color: #c8dfb5;
+  color: var(--alert-success-font);
+  background-color: var(--alert-success-bg);
+  border-color: var(--alert-success-ol);
 }
 
 .alert-success .alert-link {
-  color: #224704;
+  color: var(--alert-success-link);
 }
 
 .alert-info {
-  color: #015c7c;
-  background-color: #ccebf5;
-  border-color: #b3e1f1;
+  color: var(--alert-info-font);
+  background-color: var(--alert-info-bg);
+  border-color: var(--alert-info-ol);
 }
 
 .alert-info .alert-link {
-  color: #014a63;
+  color: var(--alert-info-link);
 }
 
 .alert-error {
-  color: #821509;
-  background-color: #f7d3cf;
-  border-color: #f4bdb7;
+  color: var(--alert-error-2);
+  background-color: var(--alert-error-bg);
+  border-color: var(--alert-error-ol);
 }
 
 .alert-error .alert-link {
-  color: #681107;
+  color: var(--alert-error-1);
 }
