--- a/pages/components/Alert/alert.css
+++ b/pages/components/Alert/alert.css
@@ -17,7 +17,7 @@
 
 .alert {
   position: relative;
-  padding: 1rem 1rem;
+  padding: 1rem;
   margin-bottom: 1rem;
   border: 1px solid transparent;
   border-radius: 0.25rem;
