Fixed Inter page routing

--- a/pages/components/Input/input.html
+++ b/pages/components/Input/input.html
@@ -34,8 +34,8 @@
 
         <div class="nav-main-heading">Components</div>
         <ul class="nav-comp-section">
-            <li class="component-links">
-                <a href="/pages/components/Avatar/avatar.html">Avatar</a>
+           <li class="component-links">
+                <a href="../Avatar/avatar.html">Avatar</a>
             </li>
             <li class="component-links">
                 <a href="../Alert/alert.html">Alert</a>
@@ -56,7 +56,7 @@
                 <a href="../Input/input.html">Input</a>
             </li>
             <li class="component-links">
-                <a href="../Lists/lists.html">List</a>
+                <a href="../List/list.html">List</a>
             </li>
             <li class="component-links">
                 <a href="../Navigation/navigation.html">Navigation</a>
@@ -64,8 +64,7 @@
             <li class="component-links">
                 <a href="../Toast/toast.html">Toast</a>
             </li>
-        </ul>
-    </nav>
+        </ul>    </nav>
     <main class="component-display">
         <h1 class="component-display-header">Input</h1>
         <pre class="comp-code-container"><code class="html">
