--- a/pages/components/Toast/toast.html
+++ b/pages/components/Toast/toast.html
@@ -35,7 +35,7 @@
         <div class="nav-main-heading">Components</div>
         <ul class="nav-comp-section">
             <li class="component-links">
-                <a href="/pages/components/Avatar/avatar.html">Avatar</a>
+                <a href="../Avatar/avatar.html">Avatar</a>
             </li>
             <li class="component-links">
                 <a href="../Alert/alert.html">Alert</a>
@@ -56,7 +56,7 @@
                 <a href="../Input/input.html">Input</a>
             </li>
             <li class="component-links">
-                <a href="../Lists/lists.html">List</a>
+                <a href="../List/list.html">List</a>
             </li>
             <li class="component-links">
                 <a href="../Navigation/navigation.html">Navigation</a>
