--- a/pages/components/Input/input.html
+++ b/pages/components/Input/input.html
@@ -34,7 +34,7 @@
 
         <div class="nav-main-heading">Components</div>
         <ul class="nav-comp-section">
-           <li class="component-links">
+            <li class="component-links">
                 <a href="../Avatar/avatar.html">Avatar</a>
             </li>
             <li class="component-links">
@@ -64,7 +64,8 @@
             <li class="component-links">
                 <a href="../Toast/toast.html">Toast</a>
             </li>
-        </ul>    </nav>
+        </ul>
+    </nav>
     <main class="component-display">
         <h1 class="component-display-header">Input</h1>
         <pre class="comp-code-container"><code class="html">
@@ -73,8 +74,16 @@
     href="https://si-mpleui.netlify.app/pages/components/Input/input.css">
             </code></pre>
         <br />
-        <div class="row">
-            <h1>coming soon</h1>
+        <div>
+            <label class="form-label mt-4">Valid input</label>
+            <input type="text" value="correct value" class="form-control is-valid">
+            <div class="valid-feedback">Success! You've done it.</div>
+        </div>
+        <br />
+        <div>
+            <label class="form-label mt-4">Invalid input</label>
+            <input type="text" value="wrong value" class="form-control is-invalid">
+            <div class="invalid-feedback">Sorry, that username's taken. Try another?</div>
         </div>
         <br />
         <p class="component-description">
