--- a/pages/components/Input/input.css
+++ b/pages/components/Input/input.css
@@ -1,3 +1,7 @@
+:root {
+  --border-color: #bbb;
+}
+
 .form-label {
   margin-bottom: 0.5rem;
 }
@@ -5,15 +9,15 @@
 .form-control {
   display: block;
   width: 100%;
-  padding: 0.375rem 0.75rem;
+  padding: 3.75px 7.5px;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: var(--primary-color);
   background-color: var(--white-global);
   background-clip: padding-box;
-  border: 1px solid #bbb;
-  border-radius: 0.25rem;
+  border: 1px solid var(--border-color);
+  border-radius: 2.5px;
 }
 
 .is-valid {
@@ -43,5 +47,5 @@
   background-color: var(--white-global);
   border-color: var(--failure-color);
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(var(--failure-color), 0.25);
+  box-shadow: 0 0 0 2.5px rgba(var(--failure-color), 0.25);
 }
