--- a/pages/components/Navigation/navigation.css
+++ b/pages/components/Navigation/navigation.css
@@ -68,9 +68,9 @@
   }
   .simple-nav ul {
     flex-direction: column;
-    padding-top: 0.5rem;
+    padding-top: 5px;
   }
   .simple-nav li {
-    padding: 0.5rem 0;
+    padding: 5px 0;
   }
 }
