Feature/ badge on icons

--- a/pages/components/Badge/badge.css
+++ b/pages/components/Badge/badge.css
@@ -4,7 +4,7 @@
   font-size: 0.75em;
   font-weight: 700;
   line-height: 1;
-  color:var(--white-global);
+  color: var(--white-global);
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
@@ -35,4 +35,63 @@
 .bg-warning {
   --bs-bg-opacity: 1;
   background-color: var(--warning-color) !important;
+}
+
+.badge-round {
+  color: var(--white-global);
+  border-radius: 10%;
+  width: 70px;
+  position: inherit;
+  top: 20px;
+  right: 20px;
+}
+
+.badge-primary {
+  background: radial-gradient(var(--primary-color), var(--light-primary-color));
+}
+
+.badge-notification {
+  background: radial-gradient(
+    var(--warning-color),
+    var(--warning-color),
+    var(--white-global)
+  );
+}
+
+.badge-success {
+  background: radial-gradient(
+    var(--success-color),
+    var(--success-color),
+    var(--white-global)
+  );
+}
+
+.badge-fail {
+  background: radial-gradient(
+    var(--failure-color),
+    var(--failure-color),
+    var(--white-global)
+  );
+}
+
+.badge-container {
+  color: var(--white-global);
+  position: relative;
+}
+
+.badge-round-lg {
+  height: 2rem;
+  width: 2rem;
+  position: absolute;
+  border-radius: 50%;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  top: 0px;
+  right: 0px;
+}
+
+.badge-round-lg p {
+  background-color: inherit;
+  margin: auto;
 }
