Feature/documentation badge on icon

--- a/pages/components/Badge/badge.html
+++ b/pages/components/Badge/badge.html
@@ -143,6 +143,26 @@
                 </div>
             </div>
         </div>
+        <br />
+        <p class="component-description">
+            The icons can be customized to five styles, <span class="highlight">fa-paper-plane</span>
+            (messages/emails), <span class="highlight">fa-bell</span> (notification), <span
+                class="highlight">fa-cart-flatbed</span> (shopping cart), <span class="highlight">fa-heart</span>
+            (wishlist), and
+            <span class="highlight">fa-user</span> (user profile).
+        </p>
+        <pre class="comp-code-container">
+            <code class="html">
+                &lt;div class="badge-container">
+                    &lt;span class="badge-round-sm badge-primary">
+                        &lt;p>1&lt;/p>
+                    &lt;/span>
+                    &lt;div class="icon">
+                        &lt;i class="fa-solid fa-user">&lt;/i>
+                    &lt;/div>
+                &lt;/div>
+            </code>
+        </pre>
         <!-- badge on icons end-->
         <!-- badge on avatars start -->
         <h2 class="sub-comp-header">Badge on Avatars</h2>
