--- a/pages/components/Badge/badge.css
+++ b/pages/components/Badge/badge.css
@@ -88,13 +88,13 @@
   display: flex;
   text-align: center;
   align-items: center;
-  top: 0px;
-  right: 0px;
+  top: 0rem;
+  right: 0rem;
 }
 
 .badge-round-sm {
-  height: 1.25rem;
-  width: 1.25rem;
+  height: 1.5rem;
+  width: 1.5rem;
   position: absolute;
   border-radius: 50%;
   display: flex;
@@ -115,8 +115,8 @@
 }
 
 .icon {
-  width: 50px;
-  height: 50px;
+  width: 4rem;
+  height: 4rem;
   border-radius: 100%;
   background: var(--secondary-color);
   box-shadow: 3px 3px 3px var(--light-primary-color);
